--- a/terraform/files/myapp.service
+++ b/terraform/files/myapp.service
@@ -6,7 +6,7 @@ After=network.target
 User=ec2-user
 WorkingDirectory=/home/ec2-user/flask-alb-app
 Environment=MYSQL_HOST="db.server"
-ExecStart=/usr/local/bin/gunicorn -b 0.0.0.0 -w 4 app:app
+ExecStart=/home/ec2-user/.local/bin/gunicorn -b 0.0.0.0 -w 4 app:app
 Restart=always
 
 [Install]
