--- a/ansible/db_install.yml
+++ b/ansible/db_install.yml
@@ -1,15 +1,22 @@
 ---
 - name: Provision and configure the server
-  hosts: your_target_hosts
+  hosts: all
   become: yes
+
+  vars:
+    mysql_root_unix_socket: /var/run/mysqld/mysqld.sock 
+    login_unix_socket: "{{ mysql_root_unix_socket }}"
+    login_user: "{{ MYSQL_USER }}"
+    login_password: "{{ MYSQL_PASSWORD }}"
+    
   tasks:
     - name: Update packages
-      yum:
+      dnf:
         name: '*'
         state: latest
 
     - name: Install required packages
-      yum:
+      dnf:
         name: "{{ item }}"
         state: present
       with_items:
@@ -21,6 +28,11 @@
     - name: Install AWS CLI using pip
       pip:
         name: awscli
+        executable: pip3
+
+    - name: Install pymysql using pip
+      pip:
+        name: pymysql
         executable: pip3
 
     - name: Run MariaDB installation tasks
